--- a/index.html
+++ b/index.html
@@ -39,7 +39,37 @@
                 </div>
             </div>
         </div>
+        <div class="right">
+            <div class="today-date">
+                <div class="event-day">Wed</div>
+                <div class="event-day">6th March 2024</div>
+            </div>
+            <div class="events">
+                <!--Tasks-->
+        </div>
+        <div class="add-event-wrapper active">
+            <div class="add-event-header">
+                <div class="title">Add Event</div>
+                <i class="fas fa-times close"></i>
+            </div>
+            <div class="add-event-body">
+                <div class="add-event-input">
+                    <input type="text" placeholder="Enter Event Name" class="event-name">
+                </div>
+                <div class="add-event-input">
+                    <input type="text" placeholder="Event starts at" class="event-time-start">
+                </div>
+                <div class="add-event-input">
+                    <input type="text" placeholder="Enter ends at" class="event-time-end">
+                </div>
+            </div>
+            <div class="add-event-footer">
+                <button class="add-event-btn">Add Event</button>
+            </div>
+        </div>
+        </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
