--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Task Planr</title>
+    <title>Calendar with Events</title>
   </head>
   <body>
     <div class="container">
@@ -28,10 +28,18 @@
         <div class="calendar">
           <div class="month">
             <i class="fas fa-angle-left prev"></i>
-            <div class="date"></div>
+            <div class="date">december 2015</div>
             <i class="fas fa-angle-right next"></i>
           </div>
-          
+          <div class="weekdays">
+            <div>Sun</div>
+            <div>Mon</div>
+            <div>Tue</div>
+            <div>Wed</div>
+            <div>Thu</div>
+            <div>Fri</div>
+            <div>Sat</div>
+          </div>
           <div class="days"></div>
           <div class="goto-today">
             <div class="goto">
@@ -45,7 +53,7 @@
       <div class="right">
         <div class="today-date">
           <div class="event-day">wed</div>
-          <div class="event-date">12th March 2024</div>
+          <div class="event-date">12th december 2022</div>
         </div>
         <div class="events"></div>
         <div class="add-event-wrapper">
@@ -81,6 +89,7 @@
         <i class="fas fa-plus"></i>
       </button>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
