--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="  
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Style/add.css">
+    <link rel="stylesheet" href="./Style/base.css">
+    <link rel="stylesheet" href="./Style/calendar.css">
+    <link rel="stylesheet" href="./Style/calhover.css">
+    <link rel="stylesheet" href="./Style/days.css">
+    <link rel="stylesheet" href="./Style/dayseff.css">
+    <link rel="stylesheet" href="./Style/event.css">
+    <link rel="stylesheet" href="./Style/events.css">
+    <link rel="stylesheet" href="./Style/goto.css">
+    <link rel="stylesheet" href="./Style/mq.css">
+    <link rel="stylesheet" href="./Style/today.css">
+    <link rel="stylesheet" href="./Style/todaydate.css">
+    <link rel="stylesheet" href="./Style/weekdays.css">
+    <link rel="stylesheet" href="./Style/partition/left.css">
+    <link rel="stylesheet" href="./Style/partition/right.css">
     <title>Task PLanr</title>
   </head>
   <body>
